<resources>

    <string name="app_name">To Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dialog_title">Delete Task</string>
    <string name="dialog_message">Are you sure to delete this task?</string>
    <string name="confirm">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="due_date">Due Date : %s</string>
    <string name="creation_date">Creation Date : %s</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="past">Past</string>
    <string name="task_is_done">Task Is Done</string>
    <string name="edit">Edit</string>
    <string name="coming">Coming</string>
    <string name="add_new_task">Add New Task</string>
    <string name="my_task">My Tasks</string>
    <string name="task_details">Task Details</string>
    <string name="edit_task">Edit Task</string>
    <string name="don">Don</string>
    <string name="alpha">A-Z</string>
    <string name="reset">Reset</string>
    <string name="creation_date_menu">Creation Date</string>
    <string name="due_date_menu">Due Date</string>


</resources>