<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_iscomplate"
        android:title="@string/don"
        />
    <item
        android:id="@+id/sort_isPast"
        android:title="@string/coming"
        />
    <item
        android:id="@+id/sort_alpha"
        android:title="@string/alpha"
        />
    <item
        android:id="@+id/sort_due"
        android:title="@string/due_date_menu"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/sort_cration"
        android:title="@string/creation_date_menu"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/un_sorted"
        android:title="@string/reset"
        app:showAsAction="never"
        />

</menu>