<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<data>
    <variable
        name="viewModel"
        type="model.ToDoViewModel" />
    <variable
        name="addTaskFragment"
        type="com.example.todolistapp.AddTaskFragment" />
</data>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:context=".AddTaskFragment">

            <androidx.cardview.widget.CardView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="#F8EDEA"
                app:cardCornerRadius="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fieldTitle"
                        android:layout_width="250dp"
                        android:hint="@string/title"
                        android:textColor="@color/textBlack"
                        app:boxStrokeColor="@color/textBlack"
                        android:layout_height="wrap_content"
                        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="10dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_input_edit_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#1B1B1B"
                            android:inputType="text"
                            android:text="@={viewModel.title}"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/calender"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="20dp"
                        android:onClick="@{()-> addTaskFragment.dateDialog()}"
                        app:layout_constraintStart_toStartOf="@id/fieldTitle"
                        app:layout_constraintTop_toBottomOf="@id/fieldTitle"
                        app:srcCompat="@drawable/ic_calendar" />
                    <TextView
                        android:id="@+id/task_date"
                        app:layout_constraintTop_toTopOf="@id/calender"
                        app:layout_constraintBottom_toBottomOf="@id/calender"
                        app:layout_constraintStart_toEndOf="@id/calender"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/textBlack"
                        android:layout_marginStart="5dp"
                        android:text="@{@string/due_date(viewModel.dueDate)}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fieldDescription"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:hint="@string/description"
                        app:boxStrokeColor="@color/textBlack"
                        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintTop_toBottomOf="@id/calender"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:scrollbars="vertical"
                        android:layout_marginTop="40dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_input_edit_description"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textMultiLine"
                            android:textColor="@color/textBlack"
                            android:text="@={viewModel.description}"
                            android:maxLines="8" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/done"
                        android:text="@string/add"
                        android:onClick="@{()-> addTaskFragment.saveNewTask()}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fieldDescription"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>